fix navbar covering text on mobile

--- a/client/shisha-rent/src/components/customer/home/Home.module.scss
+++ b/client/shisha-rent/src/components/customer/home/Home.module.scss
@@ -148,7 +148,7 @@
   .hero {
     .logoWrapper {
       max-width: 80%;
-      margin-top: 60px;
+      margin-top: 10vh;
 
       img {
         display: none;
